data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_500.wast
;; 1. **Test Description:**    - Create a test with a deeply nested loop structure where the innermost loop contains a `br` instruction. Ensure that the target label of the `br` instruction does not match the expected type on the operand stack.    - **Constraint Checking:** This tests whether the implementation correctly handles operand types when unwinding the stack for the `br` instruction.    - **Relation to Infinite Loops:** Incorrect type checking may result in an unexpected operand stack state, causing the loop to behave unpredictably.

(assert_invalid
  (module (func $deeply-nested-loop-type-mismatch
    (block (result i32)
      (loop (result i32)
        (loop (result i32)
          (br 2 (i32.const 42)) ; Incorrect targeting to ensure type mismatch
        )
      )
    )
  ))
  "type mismatch"
)